[project]
name = "bbc-news"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.5",
    "matplotlib==3.10.3",
    "nltk==3.9.1",
    "notebook>=7.4.4",
    "pandas==2.3.1",
    "pip==25.1.1",
    "plotly==6.2.0",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
    "spacy==3.8.7",
    "squarify==0.4.4",
]
